; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_cxt.c_qed_cxt_hw_init_pf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_cxt.c_qed_cxt_hw_init_pf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_hwfn = type { i32 }
%struct.qed_ptt = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qed_cxt_hw_init_pf(%struct.qed_hwfn* %0, %struct.qed_ptt* %1) #0 {
  %3 = alloca %struct.qed_hwfn*, align 8
  %4 = alloca %struct.qed_ptt*, align 8
  store %struct.qed_hwfn* %0, %struct.qed_hwfn** %3, align 8
  store %struct.qed_ptt* %1, %struct.qed_ptt** %4, align 8
  %5 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %6 = load %struct.qed_ptt*, %struct.qed_ptt** %4, align 8
  %7 = call i32 @qed_qm_init_pf(%struct.qed_hwfn* %5, %struct.qed_ptt* %6, i32 1)
  %8 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %9 = call i32 @qed_cm_init_pf(%struct.qed_hwfn* %8)
  %10 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %11 = call i32 @qed_dq_init_pf(%struct.qed_hwfn* %10)
  %12 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %13 = call i32 @qed_cdu_init_pf(%struct.qed_hwfn* %12)
  %14 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %15 = call i32 @qed_ilt_init_pf(%struct.qed_hwfn* %14)
  %16 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %17 = call i32 @qed_src_init_pf(%struct.qed_hwfn* %16)
  %18 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %19 = call i32 @qed_tm_init_pf(%struct.qed_hwfn* %18)
  %20 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %21 = call i32 @qed_prs_init_pf(%struct.qed_hwfn* %20)
  ret void
}

declare dso_local i32 @qed_qm_init_pf(%struct.qed_hwfn*, %struct.qed_ptt*, i32) #1

declare dso_local i32 @qed_cm_init_pf(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_dq_init_pf(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_cdu_init_pf(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_ilt_init_pf(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_src_init_pf(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_tm_init_pf(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_prs_init_pf(%struct.qed_hwfn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
